--- a/App/Ait.Pay.Web/Ait.Pay.Web/Ait.Pay.Web.csproj
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Ait.Pay.Web.csproj
@@ -27,7 +27,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DEMO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -241,6 +241,7 @@
     <Compile Include="Controllers\PayIdentController.cs" />
     <Compile Include="Controllers\PayResearchController.cs" />
     <Compile Include="Controllers\PayDoctorController.cs" />
+    <Compile Include="Controllers\PayVisitController.cs" />
     <Compile Include="Controllers\WS_AccountController.cs" />
     <Compile Include="Controllers\WS_TodoController.cs" />
     <Compile Include="Global.asax.cs">
@@ -250,12 +251,14 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DataModels.cs" />
     <Compile Include="Models\IPayConfig.cs" />
+    <Compile Include="Models\IPayReport.cs" />
+    <Compile Include="Models\PayHelper.cs" />
+    <Compile Include="Models\PayService.cs" />
     <Compile Include="Models\TodoItemViewModel.cs" />
     <Compile Include="Controllers\Utility\ModelErrorChecker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\JsonNetFormatter.cs" />
-    <Compile Include="Providers\PayService.cs" />
     <Compile Include="Providers\RefreshTokenProvider.cs" />
     <Compile Include="PayModule.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
