--- a/Libs/Maybe2/Maybe2.csproj
+++ b/Libs/Maybe2/Maybe2.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Reflect.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringForms.cs" />
+    <Compile Include="uriHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
