--- a/App/Ait.Pay.Web/Ait.Pay.Web/Ait.Pay.Web.csproj
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Ait.Pay.Web.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Models\IPayConfig.cs" />
     <Compile Include="Models\IPayReport.cs" />
     <Compile Include="Models\PayHelper.cs" />
+    <Compile Include="Models\PayReport.cs" />
     <Compile Include="Models\PayService.cs" />
     <Compile Include="Models\TodoItemViewModel.cs" />
     <Compile Include="Controllers\Utility\ModelErrorChecker.cs" />
@@ -398,16 +399,14 @@
     <Content Include="Assets\misc\respond.min.js" />
     <Content Include="Assets\styles\select2-bootstrap.css" />
     <Content Include="Assets\styles\styles.css" />
-    <Content Include="Content\css\select2.css" />
-    <Content Include="Content\css\select2.min.css" />
+    <Content Include="Assets\Content\css\select2.css" />
+    <Content Include="Assets\Content\css\select2.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
-    <Content Include="Content\materialize-v0.97.5\css\materialize.css" />
-    <Content Include="Content\materialize-v0.97.5\css\materialize.min.css" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\LICENSE.txt" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\Material-Design-Icons.svg" />
-    <Content Include="Content\materialize-v0.97.5\js\materialize.js" />
-    <Content Include="Content\materialize-v0.97.5\js\materialize.min.js" />
+    <Content Include="Content\materialize\css\materialize.css" />
+    <Content Include="Content\materialize\css\materialize.min.css" />
+    <Content Include="Content\materialize\font\material-design-icons\LICENSE.txt" />
+    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="font\material-design-icons\LICENSE.txt" />
@@ -1231,30 +1230,6 @@
     <Content Include="Scripts\i18n\vi.js" />
     <Content Include="Scripts\i18n\zh-CN.js" />
     <Content Include="Scripts\i18n\zh-TW.js" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Thin.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Thin.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Thin.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Thin.eot" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Regular.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Regular.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Regular.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Regular.eot" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Medium.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Medium.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Medium.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Medium.eot" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Light.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Light.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Light.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Light.eot" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Bold.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Bold.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Bold.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\roboto\Roboto-Bold.eot" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\Material-Design-Icons.woff2" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\Material-Design-Icons.woff" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\Material-Design-Icons.ttf" />
-    <Content Include="Content\materialize-v0.97.5\font\material-design-icons\Material-Design-Icons.eot" />
     <Content Include="font\material-design-icons\Material-Design-Icons.eot" />
     <Content Include="font\material-design-icons\Material-Design-Icons.ttf" />
     <Content Include="font\material-design-icons\Material-Design-Icons.woff" />
@@ -1279,6 +1254,55 @@
     <Content Include="font\roboto\Roboto-Thin.ttf" />
     <Content Include="font\roboto\Roboto-Thin.woff" />
     <Content Include="font\roboto\Roboto-Thin.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Thin.woff2" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Thin.woff" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Thin.ttf" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Thin.eot" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Regular.woff2" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Regular.woff" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Regular.ttf" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Regular.eot" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Medium.woff2" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Medium.woff" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Medium.ttf" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Medium.eot" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Light.woff2" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Light.woff" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Light.ttf" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Light.eot" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Bold.woff2" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Bold.woff" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Bold.ttf" />
+    <Content Include="Content\materialize\font\roboto\Roboto-Bold.eot" />
+    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.woff2" />
+    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.woff" />
+    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.ttf" />
+    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.eot" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.woff2" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.woff" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.ttf" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.eot" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.woff2" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.woff" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.ttf" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.eot" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.woff2" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.woff" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.ttf" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.eot" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.woff2" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.woff" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.ttf" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.eot" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.woff2" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.woff" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.ttf" />
+    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.eot" />
     <None Include="Properties\PublishProfiles\1.0.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
@@ -1300,6 +1324,8 @@
     <Content Include="Scripts\jquery.inputmask\jquery.inputmask.bundle.js" />
     <Content Include="Scripts\jquery.inputmask\jquery.inputmask.js" />
     <Content Include="Scripts\jquery.inputmask\jquery.inputmask.min.js" />
+    <Content Include="Scripts\materialize\materialize.js" />
+    <Content Include="Scripts\materialize\materialize.min.js" />
     <Content Include="Scripts\ngStorage.js" />
     <Content Include="Scripts\ngStorage.min.js" />
     <Content Include="Scripts\select2.js" />
@@ -1317,11 +1343,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="fonts\FontAwesome.otf" />
-    <Content Include="fonts\fontawesome-webfont.woff2" />
-    <Content Include="fonts\fontawesome-webfont.woff" />
-    <Content Include="fonts\fontawesome-webfont.ttf" />
-    <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Properties\PublishProfiles\file.pubxml" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
