--- a/App/Ait.Pay.Web/Ait.Pay.Web/packages.config
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/packages.config
@@ -13,7 +13,7 @@
   <package id="gsklee.ngStorage" version="0.3.10" targetFramework="net451" />
   <package id="jQuery" version="3.1.1" targetFramework="net451" />
   <package id="jQuery.InputMask" version="3.3.3" targetFramework="net451" />
-  <package id="materializecss" version="0.97.5" targetFramework="net451" />
+  <package id="materialize" version="0.97.6" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
