--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Ait.Infrastructure.Web.csproj
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Ait.Infrastructure.Web.csproj
@@ -217,7 +217,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Assets\app\ait.js" />
     <Content Include="Assets\app\app.js" />
+    <Content Include="Assets\app\auth\authInterceptorService.js" />
+    <Content Include="Assets\app\auth\authService.js" />
+    <Content Include="Assets\app\auth\authSettings.js" />
+    <Content Include="Assets\app\auth\tokensManagerService.js" />
     <Content Include="Assets\app\common\ait.emitter.js" />
     <Content Include="Assets\app\common\ait.serviceFactory.js" />
     <Content Include="Assets\app\common\ait.ui.css" />
@@ -246,9 +251,10 @@
     <Content Include="Assets\app\common\tmpls\ait-field-street.html" />
     <Content Include="Assets\app\common\tmpls\ait-field-text.html" />
     <Content Include="Assets\app\common\tmpls\ait-field-tmpls.js" />
-    <Content Include="Assets\app\controllers\homeCtrl.js" />
     <Content Include="Assets\app\controllers\registerCtrl.js" />
     <Content Include="Assets\app\controllers\signInCtrl.js" />
+    <Content Include="Assets\app\login\login.js" />
+    <Content Include="Assets\app\signup\signup.js" />
     <Content Include="Assets\jquery\kladr\jquery.kladr.css" />
     <Content Include="Assets\jquery\kladr\jquery.kladr.js" />
     <Content Include="Assets\misc\modernizr.min.js" />
