--- a/App/Ait.Auth/Ait.Auth.Api/Web.config
+++ b/App/Ait.Auth/Ait.Auth.Api/Web.config
@@ -13,6 +13,7 @@
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
+    <globalization culture="ru-RU" uiCulture="ru"></globalization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <!--
