--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/packages.config
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.5.8" targetFramework="net451" />
+  <package id="angular-loading-bar" version="0.9.0" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="gsklee.ngStorage" version="0.3.10" targetFramework="net451" />
