--- a/App/Ait.Auth/Ait.Auth.Api/Ait.Auth.Api.csproj
+++ b/App/Ait.Auth/Ait.Auth.Api/Ait.Auth.Api.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>Ait.Auth.Api</RootNamespace>
     <AssemblyName>Ait.Auth.Api</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -155,6 +155,7 @@
     <Compile Include="Entities\Client.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="IAuthRepository.cs" />
     <Compile Include="Migrations\201407121205456_AddClientsAndRefreshTokenTables.cs" />
     <Compile Include="Migrations\201407121205456_AddClientsAndRefreshTokenTables.Designer.cs">
       <DependentUpon>201407121205456_AddClientsAndRefreshTokenTables.cs</DependentUpon>
@@ -163,6 +164,8 @@
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\ExternalLoginModels.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Modules\OwinConsts.cs" />
+    <Compile Include="Modules\RepModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
     <Compile Include="Providers\GoogleAuthProvider.cs" />
@@ -171,6 +174,7 @@
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Shell.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Modules\TenantModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -212,7 +216,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>26264</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/Ait.Auth.Api</IISUrl>
+          <IISUrl>http://localhost:26264/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
