--- a/App/Ait.Auth/Ait.Auth.Api/Ait.Auth.Api.csproj
+++ b/App/Ait.Auth/Ait.Auth.Api/Ait.Auth.Api.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Models\ExternalLoginModels.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Modules\OwinConsts.cs" />
-    <Compile Include="Modules\RepModule.cs" />
+    <Compile Include="Modules\SetupModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
     <Compile Include="Providers\GoogleAuthProvider.cs" />
