--- a/.gitignore
+++ b/.gitignore
@@ -275,5 +275,5 @@ build/
 /packages
 
 
-**/App_Data/gkb/Settings.txt
+**/App_Data/*/Settings.txt
 /App/Ait.Auth/Ait.Auth.Api/App_Data/Settings.txt
