--- a/Libs/Maybe2/Maybe2.csproj
+++ b/Libs/Maybe2/Maybe2.csproj
@@ -45,7 +45,10 @@
     <Compile Include="Classes\LazyCache.cs" />
     <Compile Include="Coder.cs" />
     <Compile Include="Configuration\ISettingsProvider.cs" />
+    <Compile Include="Configuration\IShell.cs" />
     <Compile Include="Configuration\IShellSettings.cs" />
+    <Compile Include="Configuration\Shell.cs" />
+    <Compile Include="Configuration\ShellConsts.cs" />
     <Compile Include="Decliner.cs" />
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="DynamicDictionary.cs" />
@@ -61,6 +64,7 @@
     <Compile Include="IRange.cs" />
     <Compile Include="MaybeMonad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Re.cs" />
     <Compile Include="Reflect.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringForms.cs" />
