--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Ait.Infrastructure.Web.csproj
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Ait.Infrastructure.Web.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>Ait.Infrastructure.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -1341,7 +1341,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>33651</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:33651/</IISUrl>
+          <IISUrl>http://localhost/Ait.Infrastructure.Web</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
